# lotus

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  TOOLS.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: CMakeLists.txt  PointerAnalysisExample.cpp
examples/pdg-queries/: README.md  example-queries.txt  test-program.c
lib/: CMakeLists.txt
lib/Alias/: CMakeLists.txt
lib/Alias/AliasAnalysisWrapper/: AliasAnalysisWrapper.cpp  CMakeLists.txt
lib/Alias/AllocAA/: AllocAA.cpp
lib/Alias/Andersen/: Andersen.cpp  CMakeLists.txt  ConstraintCollect.cpp  ConstraintOptimize.cpp  ConstraintSolving.cpp
lib/Alias/AserPTA/: CMakeLists.txt
lib/Alias/CFLAA/: CFLAndersAliasAnalysis.cpp
lib/Alias/CHA/: ClassHierarchyAnalysis.cpp
lib/Alias/DyckAA/: AAAnalyzer.cpp  CMakeLists.txt  DyckAliasAnalysis.cpp  DyckModRefAnalysis.cpp  DyckVFG.cpp  DyckValueFlowAnalysis.cpp
lib/Alias/LotusAA/: CMakeLists.txt
lib/Alias/OriginAA/: OriginPointerAnalysis.cpp  PointerAnalysis.cpp
lib/Alias/SRAA/: StrictRelationAliasAnalysis.cpp
lib/Alias/UnderApproxAA/: CMakeLists.txt  Canonical.cpp  EquivDB.cpp  README.md  UnderApproxAA.cpp
lib/Alias/seadsa/: AllocSiteInfo.cc  AllocWrapInfo.cc  DsaAnalysis.cc  DsaCompleteCallGraph.cc  DsaInfo.cc  DsaLibFuncInfo.cc  RemovePtrToInt.cc  SeaDsaAliasAnalysis.cc  ShadowMem.cc
lib/Analysis/: CMakeLists.txt
lib/Analysis/CFG/: CFGReachability.cpp  CMakeLists.txt  Dominator.cpp  DominatorForest.cpp  DominatorNode.cpp  SotoTopo.cpp  TopologicalOrder.cpp  WeakTopologicalOrder.cpp
lib/Analysis/Clam/: CMakeLists.txt  ClamAnalysis.cpp
lib/Analysis/Concurrency/: CMakeLists.txt  LockSetAnalysis.cpp  MHPAnalysis.cpp  ThreadAPI.cpp
lib/Analysis/GVFA/: CMakeLists.txt  GlobalValueFlowAnalysis.cpp  ReachabilityAlgorithms.cpp  SlicingAlgorithms.cpp  VulnerabilityCheckers.cpp
lib/Analysis/IFDS/: BoostExceptionStub.cpp  CMakeLists.txt  IDESolver.cpp  IFDSDebugUtils.cpp  IFDSFramework.cpp  IFDSReachingDefinitions.cpp  IFDSSolver.cpp  IFDSTaintAnalysis.cpp  ParallelIFDSSolver.cpp  README.md  ReachingDefinitions.cpp  TaintAnalysis.cpp
lib/Analysis/Mono/: CMakeLists.txt  DataFlowAnalysis.cpp  DataFlowEngine.cpp  LiveVariablesAnalysis.cpp  ReachableAnalysis.cpp
lib/Analysis/NPA/: README.md
lib/Analysis/NullPointer/: AliasAnalysisAdapter.cpp  CMakeLists.txt  ContextSensitiveLocalNullCheckAnalysis.cpp  ContextSensitiveNullCheckAnalysis.cpp  ContextSensitiveNullFlowAnalysis.cpp  LocalNullCheckAnalysis.cpp  NullCheckAnalysis.cpp  NullFlowAnalysis.cpp
lib/Analysis/Sprattus/: Analyzer.cpp  BilateralAnalyzer.cpp  CMakeLists.txt  Config.cpp  DomainConstructor.cpp  UnilateralAnalyzer.cpp
lib/Analysis/WPDS/: CMakeLists.txt  InterProceduralDataFlowEngine.cpp  WPDSUninitializedVariables.cpp
lib/Analysis/sparta/: CMakeLists.txt
lib/Annotation/: CMakeLists.txt  ExternalModRefTable.cpp  ExternalPointerTable.cpp  TaintConfigParser.cpp
lib/Apps/: CMakeLists.txt
lib/Apps/Checker/: CMakeLists.txt
lib/Apps/clam/: CMakeLists.txt  CfgBuilder.cc  CfgBuilderEmitters.hh  CfgBuilderLit.cc  CfgBuilderLit.hh  Clam.cc  ClamQueryCache.cc  ClamQueryCache.hh
lib/CFL/: CMakeLists.txt
lib/CFL/CSIndex/: BitVector.cpp  CMakeLists.txt  CSProgressBar.cpp  DWGraph.cpp  DWGraphUtil.cpp  DataComp.cpp  Grail.cpp  Graph.cpp  GraphUtil.cpp  ParallelTabulation.cpp  PathTree.cpp  PathtreeQuery.cpp  Query.cpp  ReachBackbone.cpp  TCSEstimator.cpp  Tabulation.cpp
lib/CFL/DynamicBidirectedDyck/: CFLGraph.cpp  CFLReach.cpp  DyckReach.cpp
lib/CFL/Graspan/: CMakeLists.txt
lib/CFL/InterDyckGraphReduce/: CFLGraph.cpp  CFLReach.cpp  CMakeLists.txt  README.md  dkMerge.cpp  example.dot  graph_simp.py  graphtest.cpp
lib/Checker/: CMakeLists.txt  TaintConfigManager.cpp  TaintConfigParser.cpp
lib/Checker/Concurrency/: AtomicityChecker.cpp  CMakeLists.txt  ConcurrencyChecker.cpp  ConditionVariableChecker.cpp  DataRaceChecker.cpp  DeadlockChecker.cpp  LockMismatchChecker.cpp
lib/Checker/GVFA/: FreeOfNonHeapMemoryChecker.cpp  InvalidUseOfStackAddressChecker.cpp  NullPointerChecker.cpp  UseAfterFreeChecker.cpp  (+1 more)
lib/Clam/: CMakeLists.txt
lib/Dataflow/: CMakeLists.txt
lib/Fuzzing/: README.md
lib/LLVMUtils/: API.cpp  CFG.cpp  CMakeLists.txt  Debug.cpp  Demangle.cpp  InstructionUtils.cpp  RecursiveTimer.cpp  SotoTopo.cpp  Statistics.cpp  StringUtils.cpp  ThreadPool.cpp  TopologicalOrder.cpp  WeakTopologicalOrder.cpp
lib/LSP/: CMakeLists.txt  LSP.cpp  LSPServer.cpp
lib/MCP/: CMakeLists.txt  MCPServer.cpp
lib/Support/: APISpec.cpp  CMakeLists.txt  UnionFind.cpp  cJSON.cpp
lib/Transform/: CMakeLists.txt  ElimPhi.cpp  ExpandAssume.cpp  FlattenInit.cpp  LLVM_Optimizer.cpp  LowerConstantExpr.cpp  LowerGlobalConstantArraySelect.cpp  ModuleOptimizer.cpp  SoftFloat.cpp  UnrollVectors.cpp  Unrolling.cpp
lib/clam/: CMakeLists.txt  README.md
scripts/: CMakeLists.txt  README.md  clam.py
tests/: CMakeLists.txt  run_tests.sh
tests/integration/: IFDSIntegrationTest.cpp
tests/regression/: validate_npd.py
tests/unit/: IFDSSolverTest.cpp  MHPAnalysisTest.cpp  ReachingDefinitionsTest.cpp  TaintAnalysisTest.cpp  pdg_slicing_test.cpp
tests/utils/: IFDSTestFixture.h  SourceLocationEntry.h  TestConfig.h
tools/: CMakeLists.txt  index.html
tools/alias/: CMakeLists.txt  call-graph.cpp  dyck-aa.cpp  index.html  origin_aa.cpp  sea-dsa-dg.cpp  seadsa-tool.cpp
tools/canary/: canary.cpp
tools/cfl/: CMakeLists.txt  index.html
tools/checker/: CMakeLists.txt  canary_npa.cpp  concurrency-checker.cpp  ifds_taint.cpp  index.html  kint.cpp  lotus_concur.cpp  lotus_gvfa.cpp  lotus_kint.cpp
tools/clam/: CMakeLists.txt  README.md  clam.cc
tools/csr/: README.md  csr.cpp
tools/graspan/: CMakeLists.txt  graspan.cpp
tools/gvfa/: CMakeLists.txt  gvfa-tool.cpp
tools/llvm-ai/: CMakeLists.txt  llvm-ai.cpp
tools/lsp/: CMakeLists.txt  lsp.cpp
tools/mcp/: CMakeLists.txt  index.html  mcp.cpp
tools/owl/: index.html  owl.cpp
tools/pdg-query/: CMakeLists.txt  index.html  pdg-query.cpp
tools/verifier/: CMakeLists.txt  index.html
(+707 files in other folders)
