add_subdirectory(Alias)
add_subdirectory(Support)
add_subdirectory(LLVMUtils)
add_subdirectory(Transform)
add_subdirectory(Solvers)
add_subdirectory(IR)
add_subdirectory(Analysis)
add_subdirectory(Dataflow)
add_subdirectory(Annotation)
add_subdirectory(Checker)
add_subdirectory(CFL/CSIndex)
add_subdirectory(CFL/Graspan)
# POCR needs SVF; we do not enable it for now.
# add_subdirectory(CFL/POCR)
add_subdirectory(Fuzzing)
add_subdirectory(Clam)
add_subdirectory(LSP)