add_subdirectory(Alias)
add_subdirectory(Support)
add_subdirectory(LLVMUtils)
add_subdirectory(Transform)
add_subdirectory(Solvers)
add_subdirectory(IR)
add_subdirectory(Analysis)
add_subdirectory(Dataflow)
add_subdirectory(Annotation)
add_subdirectory(Checker)
add_subdirectory(CFL)
add_subdirectory(Fuzzing)
add_subdirectory(clam)
add_subdirectory(LSP)
add_subdirectory(seahorn)