add_library(CanaryLLVMUtils STATIC
        API.cpp
        CFG.cpp
        Debug.cpp
        Demangle.cpp
        InstructionUtils.cpp
        RecursiveTimer.cpp
        Statistics.cpp
        StringUtils.cpp
        ThreadPool.cpp
        IO/FileUtils.cpp
        IO/ReadIR.cpp
        IO/WriteIR.cpp
)


