add_library(CanarySupport STATIC
        API.cpp
        APISpec.cpp
        CFG.cpp
        ProgressBar.cpp
        RecursiveTimer.cpp
        Statistics.cpp
        ThreadPool.cpp
        InstructionUtils.cpp
        Debug.cpp
        StringUtils.cpp
        MultiThreading.cpp
        Timer.cpp
        RNG.cpp
        IO/FileUtils.cpp
        IO/ReadIR.cpp
        IO/WriteIR.cpp
        UnionFind.cpp
        cJSON.cpp
)
